add tracker_filter.html and report_1.pdf

--- a/clustering/report_2.html
+++ b/clustering/report_2.html
@@ -72,8 +72,7 @@ That's how the group that best fits to your own results looks like:
 </div>
 
 <div>
-<h3>Step increase reccomendation for weight lost in your group</h3>
-<h4>Your Age compared to your group</h4>
+<h3>Step increase suggestion for weight lost in your group</h3>
     <div style="float:left; margin:0; width:100%;">
     <img src='./img/2/cluster_bmi_steps_user_2.png' alt='Bmi of your group' style="scale:0.6 align:center">
     </div>
